// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render component correctly with list of products 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Unknown
    products={
        Array [
            Object {
              "createdAt": 0,
              "description": "A smartphone",
              "id": 0,
              "name": "Samsung Phone",
              "price": 0,
              "seller": "Slot Limited",
            },
            Object {
              "createdAt": 1,
              "description": "An elegant smartphone",
              "id": 1,
              "name": "Iphone Phone",
              "price": 1,
              "seller": "Jumia Limited",
            },
            Object {
              "createdAt": 2,
              "description": "A low coat smartphone",
              "id": 2,
              "name": "Tecno Phone",
              "price": 2,
              "seller": "Unknown Limited",
            },
          ]
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="row"
>
        <div
                className="col-12 mb-4"
        >
                <div
                        className="mt-4"
                >
                        <div
                                className="card"
                        >
                                <div
                                        className="card-body"
                                >
                                        <div
                                                className="row"
                                        >
                                                <DashboardItem
                                                        createdAt={0}
                                                        description="A smartphone"
                                                        id={0}
                                                        name="Samsung Phone"
                                                        price={0}
                                                        seller="Slot Limited"
                                                />
                                                <DashboardItem
                                                        createdAt={1}
                                                        description="An elegant smartphone"
                                                        id={1}
                                                        name="Iphone Phone"
                                                        price={1}
                                                        seller="Jumia Limited"
                                                />
                                                <DashboardItem
                                                        createdAt={2}
                                                        description="A low coat smartphone"
                                                        id={2}
                                                        name="Tecno Phone"
                                                        price={2}
                                                        seller="Unknown Limited"
                                                />
                                                <div
                                                        className="fixed-action"
                                                >
                                                        <button
                                                                className="btn-floating"
                                                                style={
                                                                        Object {
                                                                                "outline": "none",
                                                                              }
                                                                }
                                                        >
                                                                <i
                                                                        className="ion-edit"
                                                                />
                                                        </button>
                                                </div>
                                        </div>
                                </div>
                        </div>
                </div>
        </div>
</div>,
      "className": "container",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="col-12 mb-4"
>
          <div
                    className="mt-4"
          >
                    <div
                              className="card"
                    >
                              <div
                                        className="card-body"
                              >
                                        <div
                                                  className="row"
                                        >
                                                  <DashboardItem
                                                            createdAt={0}
                                                            description="A smartphone"
                                                            id={0}
                                                            name="Samsung Phone"
                                                            price={0}
                                                            seller="Slot Limited"
                                                  />
                                                  <DashboardItem
                                                            createdAt={1}
                                                            description="An elegant smartphone"
                                                            id={1}
                                                            name="Iphone Phone"
                                                            price={1}
                                                            seller="Jumia Limited"
                                                  />
                                                  <DashboardItem
                                                            createdAt={2}
                                                            description="A low coat smartphone"
                                                            id={2}
                                                            name="Tecno Phone"
                                                            price={2}
                                                            seller="Unknown Limited"
                                                  />
                                                  <div
                                                            className="fixed-action"
                                                  >
                                                            <button
                                                                      className="btn-floating"
                                                                      style={
                                                                                Object {
                                                                                          "outline": "none",
                                                                                        }
                                                                      }
                                                            >
                                                                      <i
                                                                                className="ion-edit"
                                                                      />
                                                            </button>
                                                  </div>
                                        </div>
                              </div>
                    </div>
          </div>
</div>,
        "className": "row",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="mt-4"
>
            <div
                        className="card"
            >
                        <div
                                    className="card-body"
                        >
                                    <div
                                                className="row"
                                    >
                                                <DashboardItem
                                                            createdAt={0}
                                                            description="A smartphone"
                                                            id={0}
                                                            name="Samsung Phone"
                                                            price={0}
                                                            seller="Slot Limited"
                                                />
                                                <DashboardItem
                                                            createdAt={1}
                                                            description="An elegant smartphone"
                                                            id={1}
                                                            name="Iphone Phone"
                                                            price={1}
                                                            seller="Jumia Limited"
                                                />
                                                <DashboardItem
                                                            createdAt={2}
                                                            description="A low coat smartphone"
                                                            id={2}
                                                            name="Tecno Phone"
                                                            price={2}
                                                            seller="Unknown Limited"
                                                />
                                                <div
                                                            className="fixed-action"
                                                >
                                                            <button
                                                                        className="btn-floating"
                                                                        style={
                                                                                    Object {
                                                                                                "outline": "none",
                                                                                              }
                                                                        }
                                                            >
                                                                        <i
                                                                                    className="ion-edit"
                                                                        />
                                                            </button>
                                                </div>
                                    </div>
                        </div>
            </div>
</div>,
          "className": "col-12 mb-4",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div
              className="card"
>
              <div
                            className="card-body"
              >
                            <div
                                          className="row"
                            >
                                          <DashboardItem
                                                        createdAt={0}
                                                        description="A smartphone"
                                                        id={0}
                                                        name="Samsung Phone"
                                                        price={0}
                                                        seller="Slot Limited"
                                          />
                                          <DashboardItem
                                                        createdAt={1}
                                                        description="An elegant smartphone"
                                                        id={1}
                                                        name="Iphone Phone"
                                                        price={1}
                                                        seller="Jumia Limited"
                                          />
                                          <DashboardItem
                                                        createdAt={2}
                                                        description="A low coat smartphone"
                                                        id={2}
                                                        name="Tecno Phone"
                                                        price={2}
                                                        seller="Unknown Limited"
                                          />
                                          <div
                                                        className="fixed-action"
                                          >
                                                        <button
                                                                      className="btn-floating"
                                                                      style={
                                                                                    Object {
                                                                                                  "outline": "none",
                                                                                                }
                                                                      }
                                                        >
                                                                      <i
                                                                                    className="ion-edit"
                                                                      />
                                                        </button>
                                          </div>
                            </div>
              </div>
</div>,
            "className": "mt-4",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <div
                className="card-body"
>
                <div
                                className="row"
                >
                                <DashboardItem
                                                createdAt={0}
                                                description="A smartphone"
                                                id={0}
                                                name="Samsung Phone"
                                                price={0}
                                                seller="Slot Limited"
                                />
                                <DashboardItem
                                                createdAt={1}
                                                description="An elegant smartphone"
                                                id={1}
                                                name="Iphone Phone"
                                                price={1}
                                                seller="Jumia Limited"
                                />
                                <DashboardItem
                                                createdAt={2}
                                                description="A low coat smartphone"
                                                id={2}
                                                name="Tecno Phone"
                                                price={2}
                                                seller="Unknown Limited"
                                />
                                <div
                                                className="fixed-action"
                                >
                                                <button
                                                                className="btn-floating"
                                                                style={
                                                                                Object {
                                                                                                "outline": "none",
                                                                                              }
                                                                }
                                                >
                                                                <i
                                                                                className="ion-edit"
                                                                />
                                                </button>
                                </div>
                </div>
</div>,
              "className": "card",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <div
                  className="row"
>
                  <DashboardItem
                                    createdAt={0}
                                    description="A smartphone"
                                    id={0}
                                    name="Samsung Phone"
                                    price={0}
                                    seller="Slot Limited"
                  />
                  <DashboardItem
                                    createdAt={1}
                                    description="An elegant smartphone"
                                    id={1}
                                    name="Iphone Phone"
                                    price={1}
                                    seller="Jumia Limited"
                  />
                  <DashboardItem
                                    createdAt={2}
                                    description="A low coat smartphone"
                                    id={2}
                                    name="Tecno Phone"
                                    price={2}
                                    seller="Unknown Limited"
                  />
                  <div
                                    className="fixed-action"
                  >
                                    <button
                                                      className="btn-floating"
                                                      style={
                                                                        Object {
                                                                                          "outline": "none",
                                                                                        }
                                                      }
                                    >
                                                      <i
                                                                        className="ion-edit"
                                                      />
                                    </button>
                  </div>
</div>,
                "className": "card-body",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    Array [
                      <DashboardItem
                        createdAt={0}
                        description="A smartphone"
                        id={0}
                        name="Samsung Phone"
                        price={0}
                        seller="Slot Limited"
/>,
                      <DashboardItem
                        createdAt={1}
                        description="An elegant smartphone"
                        id={1}
                        name="Iphone Phone"
                        price={1}
                        seller="Jumia Limited"
/>,
                      <DashboardItem
                        createdAt={2}
                        description="A low coat smartphone"
                        id={2}
                        name="Tecno Phone"
                        price={2}
                        seller="Unknown Limited"
/>,
                    ],
                    <div
                      className="fixed-action"
>
                      <button
                                            className="btn-floating"
                                            style={
                                                                  Object {
                                                                                        "outline": "none",
                                                                                      }
                                            }
                      >
                                            <i
                                                                  className="ion-edit"
                                            />
                      </button>
</div>,
                  ],
                  "className": "row",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": "0",
                    "nodeType": "function",
                    "props": Object {
                      "createdAt": 0,
                      "description": "A smartphone",
                      "id": 0,
                      "name": "Samsung Phone",
                      "price": 0,
                      "seller": "Slot Limited",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": "1",
                    "nodeType": "function",
                    "props": Object {
                      "createdAt": 1,
                      "description": "An elegant smartphone",
                      "id": 1,
                      "name": "Iphone Phone",
                      "price": 1,
                      "seller": "Jumia Limited",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": "2",
                    "nodeType": "function",
                    "props": Object {
                      "createdAt": 2,
                      "description": "A low coat smartphone",
                      "id": 2,
                      "name": "Tecno Phone",
                      "price": 2,
                      "seller": "Unknown Limited",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": <button
                        className="btn-floating"
                        style={
                                                Object {
                                                                        "outline": "none",
                                                                      }
                        }
>
                        <i
                                                className="ion-edit"
                        />
</button>,
                      "className": "fixed-action",
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": <i
                          className="ion-edit"
/>,
                        "className": "btn-floating",
                        "style": Object {
                          "outline": "none",
                        },
                      },
                      "ref": null,
                      "rendered": Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "host",
                        "props": Object {
                          "className": "ion-edit",
                        },
                        "ref": null,
                        "rendered": null,
                        "type": "i",
                      },
                      "type": "button",
                    },
                    "type": "div",
                  },
                ],
                "type": "div",
              },
              "type": "div",
            },
            "type": "div",
          },
          "type": "div",
        },
        "type": "div",
      },
      "type": "div",
    },
    "type": "main",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="row"
>
          <div
                    className="col-12 mb-4"
          >
                    <div
                              className="mt-4"
                    >
                              <div
                                        className="card"
                              >
                                        <div
                                                  className="card-body"
                                        >
                                                  <div
                                                            className="row"
                                                  >
                                                            <DashboardItem
                                                                      createdAt={0}
                                                                      description="A smartphone"
                                                                      id={0}
                                                                      name="Samsung Phone"
                                                                      price={0}
                                                                      seller="Slot Limited"
                                                            />
                                                            <DashboardItem
                                                                      createdAt={1}
                                                                      description="An elegant smartphone"
                                                                      id={1}
                                                                      name="Iphone Phone"
                                                                      price={1}
                                                                      seller="Jumia Limited"
                                                            />
                                                            <DashboardItem
                                                                      createdAt={2}
                                                                      description="A low coat smartphone"
                                                                      id={2}
                                                                      name="Tecno Phone"
                                                                      price={2}
                                                                      seller="Unknown Limited"
                                                            />
                                                            <div
                                                                      className="fixed-action"
                                                            >
                                                                      <button
                                                                                className="btn-floating"
                                                                                style={
                                                                                          Object {
                                                                                                    "outline": "none",
                                                                                                  }
                                                                                }
                                                                      >
                                                                                <i
                                                                                          className="ion-edit"
                                                                                />
                                                                      </button>
                                                            </div>
                                                  </div>
                                        </div>
                              </div>
                    </div>
          </div>
</div>,
        "className": "container",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="col-12 mb-4"
>
            <div
                        className="mt-4"
            >
                        <div
                                    className="card"
                        >
                                    <div
                                                className="card-body"
                                    >
                                                <div
                                                            className="row"
                                                >
                                                            <DashboardItem
                                                                        createdAt={0}
                                                                        description="A smartphone"
                                                                        id={0}
                                                                        name="Samsung Phone"
                                                                        price={0}
                                                                        seller="Slot Limited"
                                                            />
                                                            <DashboardItem
                                                                        createdAt={1}
                                                                        description="An elegant smartphone"
                                                                        id={1}
                                                                        name="Iphone Phone"
                                                                        price={1}
                                                                        seller="Jumia Limited"
                                                            />
                                                            <DashboardItem
                                                                        createdAt={2}
                                                                        description="A low coat smartphone"
                                                                        id={2}
                                                                        name="Tecno Phone"
                                                                        price={2}
                                                                        seller="Unknown Limited"
                                                            />
                                                            <div
                                                                        className="fixed-action"
                                                            >
                                                                        <button
                                                                                    className="btn-floating"
                                                                                    style={
                                                                                                Object {
                                                                                                            "outline": "none",
                                                                                                          }
                                                                                    }
                                                                        >
                                                                                    <i
                                                                                                className="ion-edit"
                                                                                    />
                                                                        </button>
                                                            </div>
                                                </div>
                                    </div>
                        </div>
            </div>
</div>,
          "className": "row",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div
              className="mt-4"
>
              <div
                            className="card"
              >
                            <div
                                          className="card-body"
                            >
                                          <div
                                                        className="row"
                                          >
                                                        <DashboardItem
                                                                      createdAt={0}
                                                                      description="A smartphone"
                                                                      id={0}
                                                                      name="Samsung Phone"
                                                                      price={0}
                                                                      seller="Slot Limited"
                                                        />
                                                        <DashboardItem
                                                                      createdAt={1}
                                                                      description="An elegant smartphone"
                                                                      id={1}
                                                                      name="Iphone Phone"
                                                                      price={1}
                                                                      seller="Jumia Limited"
                                                        />
                                                        <DashboardItem
                                                                      createdAt={2}
                                                                      description="A low coat smartphone"
                                                                      id={2}
                                                                      name="Tecno Phone"
                                                                      price={2}
                                                                      seller="Unknown Limited"
                                                        />
                                                        <div
                                                                      className="fixed-action"
                                                        >
                                                                      <button
                                                                                    className="btn-floating"
                                                                                    style={
                                                                                                  Object {
                                                                                                                "outline": "none",
                                                                                                              }
                                                                                    }
                                                                      >
                                                                                    <i
                                                                                                  className="ion-edit"
                                                                                    />
                                                                      </button>
                                                        </div>
                                          </div>
                            </div>
              </div>
</div>,
            "className": "col-12 mb-4",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <div
                className="card"
>
                <div
                                className="card-body"
                >
                                <div
                                                className="row"
                                >
                                                <DashboardItem
                                                                createdAt={0}
                                                                description="A smartphone"
                                                                id={0}
                                                                name="Samsung Phone"
                                                                price={0}
                                                                seller="Slot Limited"
                                                />
                                                <DashboardItem
                                                                createdAt={1}
                                                                description="An elegant smartphone"
                                                                id={1}
                                                                name="Iphone Phone"
                                                                price={1}
                                                                seller="Jumia Limited"
                                                />
                                                <DashboardItem
                                                                createdAt={2}
                                                                description="A low coat smartphone"
                                                                id={2}
                                                                name="Tecno Phone"
                                                                price={2}
                                                                seller="Unknown Limited"
                                                />
                                                <div
                                                                className="fixed-action"
                                                >
                                                                <button
                                                                                className="btn-floating"
                                                                                style={
                                                                                                Object {
                                                                                                                "outline": "none",
                                                                                                              }
                                                                                }
                                                                >
                                                                                <i
                                                                                                className="ion-edit"
                                                                                />
                                                                </button>
                                                </div>
                                </div>
                </div>
</div>,
              "className": "mt-4",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <div
                  className="card-body"
>
                  <div
                                    className="row"
                  >
                                    <DashboardItem
                                                      createdAt={0}
                                                      description="A smartphone"
                                                      id={0}
                                                      name="Samsung Phone"
                                                      price={0}
                                                      seller="Slot Limited"
                                    />
                                    <DashboardItem
                                                      createdAt={1}
                                                      description="An elegant smartphone"
                                                      id={1}
                                                      name="Iphone Phone"
                                                      price={1}
                                                      seller="Jumia Limited"
                                    />
                                    <DashboardItem
                                                      createdAt={2}
                                                      description="A low coat smartphone"
                                                      id={2}
                                                      name="Tecno Phone"
                                                      price={2}
                                                      seller="Unknown Limited"
                                    />
                                    <div
                                                      className="fixed-action"
                                    >
                                                      <button
                                                                        className="btn-floating"
                                                                        style={
                                                                                          Object {
                                                                                                            "outline": "none",
                                                                                                          }
                                                                        }
                                                      >
                                                                        <i
                                                                                          className="ion-edit"
                                                                        />
                                                      </button>
                                    </div>
                  </div>
</div>,
                "className": "card",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <div
                    className="row"
>
                    <DashboardItem
                                        createdAt={0}
                                        description="A smartphone"
                                        id={0}
                                        name="Samsung Phone"
                                        price={0}
                                        seller="Slot Limited"
                    />
                    <DashboardItem
                                        createdAt={1}
                                        description="An elegant smartphone"
                                        id={1}
                                        name="Iphone Phone"
                                        price={1}
                                        seller="Jumia Limited"
                    />
                    <DashboardItem
                                        createdAt={2}
                                        description="A low coat smartphone"
                                        id={2}
                                        name="Tecno Phone"
                                        price={2}
                                        seller="Unknown Limited"
                    />
                    <div
                                        className="fixed-action"
                    >
                                        <button
                                                            className="btn-floating"
                                                            style={
                                                                                Object {
                                                                                                    "outline": "none",
                                                                                                  }
                                                            }
                                        >
                                                            <i
                                                                                className="ion-edit"
                                                            />
                                        </button>
                    </div>
</div>,
                  "className": "card-body",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      Array [
                        <DashboardItem
                          createdAt={0}
                          description="A smartphone"
                          id={0}
                          name="Samsung Phone"
                          price={0}
                          seller="Slot Limited"
/>,
                        <DashboardItem
                          createdAt={1}
                          description="An elegant smartphone"
                          id={1}
                          name="Iphone Phone"
                          price={1}
                          seller="Jumia Limited"
/>,
                        <DashboardItem
                          createdAt={2}
                          description="A low coat smartphone"
                          id={2}
                          name="Tecno Phone"
                          price={2}
                          seller="Unknown Limited"
/>,
                      ],
                      <div
                        className="fixed-action"
>
                        <button
                                                className="btn-floating"
                                                style={
                                                                        Object {
                                                                                                "outline": "none",
                                                                                              }
                                                }
                        >
                                                <i
                                                                        className="ion-edit"
                                                />
                        </button>
</div>,
                    ],
                    "className": "row",
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": "0",
                      "nodeType": "function",
                      "props": Object {
                        "createdAt": 0,
                        "description": "A smartphone",
                        "id": 0,
                        "name": "Samsung Phone",
                        "price": 0,
                        "seller": "Slot Limited",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": [Function],
                    },
                    Object {
                      "instance": null,
                      "key": "1",
                      "nodeType": "function",
                      "props": Object {
                        "createdAt": 1,
                        "description": "An elegant smartphone",
                        "id": 1,
                        "name": "Iphone Phone",
                        "price": 1,
                        "seller": "Jumia Limited",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": [Function],
                    },
                    Object {
                      "instance": null,
                      "key": "2",
                      "nodeType": "function",
                      "props": Object {
                        "createdAt": 2,
                        "description": "A low coat smartphone",
                        "id": 2,
                        "name": "Tecno Phone",
                        "price": 2,
                        "seller": "Unknown Limited",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": [Function],
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": <button
                          className="btn-floating"
                          style={
                                                    Object {
                                                                              "outline": "none",
                                                                            }
                          }
>
                          <i
                                                    className="ion-edit"
                          />
</button>,
                        "className": "fixed-action",
                      },
                      "ref": null,
                      "rendered": Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "host",
                        "props": Object {
                          "children": <i
                            className="ion-edit"
/>,
                          "className": "btn-floating",
                          "style": Object {
                            "outline": "none",
                          },
                        },
                        "ref": null,
                        "rendered": Object {
                          "instance": null,
                          "key": undefined,
                          "nodeType": "host",
                          "props": Object {
                            "className": "ion-edit",
                          },
                          "ref": null,
                          "rendered": null,
                          "type": "i",
                        },
                        "type": "button",
                      },
                      "type": "div",
                    },
                  ],
                  "type": "div",
                },
                "type": "div",
              },
              "type": "div",
            },
            "type": "div",
          },
          "type": "div",
        },
        "type": "div",
      },
      "type": "main",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getSnapshotBeforeUpdate": true,
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`should render component with empty products 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Unknown
    products={Array []}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="row"
>
        <div
                className="col-12 mb-4"
        >
                <div
                        className="mt-4"
                >
                        <div
                                className="card"
                        >
                                <div
                                        className="card-body"
                                >
                                        <div
                                                className="row"
                                        >
                                                <p>
                                                        No products available yet
                                                </p>
                                                <div
                                                        className="fixed-action"
                                                >
                                                        <button
                                                                className="btn-floating"
                                                                style={
                                                                        Object {
                                                                                "outline": "none",
                                                                              }
                                                                }
                                                        >
                                                                <i
                                                                        className="ion-edit"
                                                                />
                                                        </button>
                                                </div>
                                        </div>
                                </div>
                        </div>
                </div>
        </div>
</div>,
      "className": "container",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="col-12 mb-4"
>
          <div
                    className="mt-4"
          >
                    <div
                              className="card"
                    >
                              <div
                                        className="card-body"
                              >
                                        <div
                                                  className="row"
                                        >
                                                  <p>
                                                            No products available yet
                                                  </p>
                                                  <div
                                                            className="fixed-action"
                                                  >
                                                            <button
                                                                      className="btn-floating"
                                                                      style={
                                                                                Object {
                                                                                          "outline": "none",
                                                                                        }
                                                                      }
                                                            >
                                                                      <i
                                                                                className="ion-edit"
                                                                      />
                                                            </button>
                                                  </div>
                                        </div>
                              </div>
                    </div>
          </div>
</div>,
        "className": "row",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="mt-4"
>
            <div
                        className="card"
            >
                        <div
                                    className="card-body"
                        >
                                    <div
                                                className="row"
                                    >
                                                <p>
                                                            No products available yet
                                                </p>
                                                <div
                                                            className="fixed-action"
                                                >
                                                            <button
                                                                        className="btn-floating"
                                                                        style={
                                                                                    Object {
                                                                                                "outline": "none",
                                                                                              }
                                                                        }
                                                            >
                                                                        <i
                                                                                    className="ion-edit"
                                                                        />
                                                            </button>
                                                </div>
                                    </div>
                        </div>
            </div>
</div>,
          "className": "col-12 mb-4",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div
              className="card"
>
              <div
                            className="card-body"
              >
                            <div
                                          className="row"
                            >
                                          <p>
                                                        No products available yet
                                          </p>
                                          <div
                                                        className="fixed-action"
                                          >
                                                        <button
                                                                      className="btn-floating"
                                                                      style={
                                                                                    Object {
                                                                                                  "outline": "none",
                                                                                                }
                                                                      }
                                                        >
                                                                      <i
                                                                                    className="ion-edit"
                                                                      />
                                                        </button>
                                          </div>
                            </div>
              </div>
</div>,
            "className": "mt-4",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <div
                className="card-body"
>
                <div
                                className="row"
                >
                                <p>
                                                No products available yet
                                </p>
                                <div
                                                className="fixed-action"
                                >
                                                <button
                                                                className="btn-floating"
                                                                style={
                                                                                Object {
                                                                                                "outline": "none",
                                                                                              }
                                                                }
                                                >
                                                                <i
                                                                                className="ion-edit"
                                                                />
                                                </button>
                                </div>
                </div>
</div>,
              "className": "card",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <div
                  className="row"
>
                  <p>
                                    No products available yet
                  </p>
                  <div
                                    className="fixed-action"
                  >
                                    <button
                                                      className="btn-floating"
                                                      style={
                                                                        Object {
                                                                                          "outline": "none",
                                                                                        }
                                                      }
                                    >
                                                      <i
                                                                        className="ion-edit"
                                                      />
                                    </button>
                  </div>
</div>,
                "className": "card-body",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <p>
                      No products available yet
</p>,
                    <div
                      className="fixed-action"
>
                      <button
                                            className="btn-floating"
                                            style={
                                                                  Object {
                                                                                        "outline": "none",
                                                                                      }
                                            }
                      >
                                            <i
                                                                  className="ion-edit"
                                            />
                      </button>
</div>,
                  ],
                  "className": "row",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "No products available yet",
                    },
                    "ref": null,
                    "rendered": "No products available yet",
                    "type": "p",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": <button
                        className="btn-floating"
                        style={
                                                Object {
                                                                        "outline": "none",
                                                                      }
                        }
>
                        <i
                                                className="ion-edit"
                        />
</button>,
                      "className": "fixed-action",
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": <i
                          className="ion-edit"
/>,
                        "className": "btn-floating",
                        "style": Object {
                          "outline": "none",
                        },
                      },
                      "ref": null,
                      "rendered": Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "host",
                        "props": Object {
                          "className": "ion-edit",
                        },
                        "ref": null,
                        "rendered": null,
                        "type": "i",
                      },
                      "type": "button",
                    },
                    "type": "div",
                  },
                ],
                "type": "div",
              },
              "type": "div",
            },
            "type": "div",
          },
          "type": "div",
        },
        "type": "div",
      },
      "type": "div",
    },
    "type": "main",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="row"
>
          <div
                    className="col-12 mb-4"
          >
                    <div
                              className="mt-4"
                    >
                              <div
                                        className="card"
                              >
                                        <div
                                                  className="card-body"
                                        >
                                                  <div
                                                            className="row"
                                                  >
                                                            <p>
                                                                      No products available yet
                                                            </p>
                                                            <div
                                                                      className="fixed-action"
                                                            >
                                                                      <button
                                                                                className="btn-floating"
                                                                                style={
                                                                                          Object {
                                                                                                    "outline": "none",
                                                                                                  }
                                                                                }
                                                                      >
                                                                                <i
                                                                                          className="ion-edit"
                                                                                />
                                                                      </button>
                                                            </div>
                                                  </div>
                                        </div>
                              </div>
                    </div>
          </div>
</div>,
        "className": "container",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="col-12 mb-4"
>
            <div
                        className="mt-4"
            >
                        <div
                                    className="card"
                        >
                                    <div
                                                className="card-body"
                                    >
                                                <div
                                                            className="row"
                                                >
                                                            <p>
                                                                        No products available yet
                                                            </p>
                                                            <div
                                                                        className="fixed-action"
                                                            >
                                                                        <button
                                                                                    className="btn-floating"
                                                                                    style={
                                                                                                Object {
                                                                                                            "outline": "none",
                                                                                                          }
                                                                                    }
                                                                        >
                                                                                    <i
                                                                                                className="ion-edit"
                                                                                    />
                                                                        </button>
                                                            </div>
                                                </div>
                                    </div>
                        </div>
            </div>
</div>,
          "className": "row",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div
              className="mt-4"
>
              <div
                            className="card"
              >
                            <div
                                          className="card-body"
                            >
                                          <div
                                                        className="row"
                                          >
                                                        <p>
                                                                      No products available yet
                                                        </p>
                                                        <div
                                                                      className="fixed-action"
                                                        >
                                                                      <button
                                                                                    className="btn-floating"
                                                                                    style={
                                                                                                  Object {
                                                                                                                "outline": "none",
                                                                                                              }
                                                                                    }
                                                                      >
                                                                                    <i
                                                                                                  className="ion-edit"
                                                                                    />
                                                                      </button>
                                                        </div>
                                          </div>
                            </div>
              </div>
</div>,
            "className": "col-12 mb-4",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <div
                className="card"
>
                <div
                                className="card-body"
                >
                                <div
                                                className="row"
                                >
                                                <p>
                                                                No products available yet
                                                </p>
                                                <div
                                                                className="fixed-action"
                                                >
                                                                <button
                                                                                className="btn-floating"
                                                                                style={
                                                                                                Object {
                                                                                                                "outline": "none",
                                                                                                              }
                                                                                }
                                                                >
                                                                                <i
                                                                                                className="ion-edit"
                                                                                />
                                                                </button>
                                                </div>
                                </div>
                </div>
</div>,
              "className": "mt-4",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <div
                  className="card-body"
>
                  <div
                                    className="row"
                  >
                                    <p>
                                                      No products available yet
                                    </p>
                                    <div
                                                      className="fixed-action"
                                    >
                                                      <button
                                                                        className="btn-floating"
                                                                        style={
                                                                                          Object {
                                                                                                            "outline": "none",
                                                                                                          }
                                                                        }
                                                      >
                                                                        <i
                                                                                          className="ion-edit"
                                                                        />
                                                      </button>
                                    </div>
                  </div>
</div>,
                "className": "card",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <div
                    className="row"
>
                    <p>
                                        No products available yet
                    </p>
                    <div
                                        className="fixed-action"
                    >
                                        <button
                                                            className="btn-floating"
                                                            style={
                                                                                Object {
                                                                                                    "outline": "none",
                                                                                                  }
                                                            }
                                        >
                                                            <i
                                                                                className="ion-edit"
                                                            />
                                        </button>
                    </div>
</div>,
                  "className": "card-body",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      <p>
                        No products available yet
</p>,
                      <div
                        className="fixed-action"
>
                        <button
                                                className="btn-floating"
                                                style={
                                                                        Object {
                                                                                                "outline": "none",
                                                                                              }
                                                }
                        >
                                                <i
                                                                        className="ion-edit"
                                                />
                        </button>
</div>,
                    ],
                    "className": "row",
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": "No products available yet",
                      },
                      "ref": null,
                      "rendered": "No products available yet",
                      "type": "p",
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": <button
                          className="btn-floating"
                          style={
                                                    Object {
                                                                              "outline": "none",
                                                                            }
                          }
>
                          <i
                                                    className="ion-edit"
                          />
</button>,
                        "className": "fixed-action",
                      },
                      "ref": null,
                      "rendered": Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "host",
                        "props": Object {
                          "children": <i
                            className="ion-edit"
/>,
                          "className": "btn-floating",
                          "style": Object {
                            "outline": "none",
                          },
                        },
                        "ref": null,
                        "rendered": Object {
                          "instance": null,
                          "key": undefined,
                          "nodeType": "host",
                          "props": Object {
                            "className": "ion-edit",
                          },
                          "ref": null,
                          "rendered": null,
                          "type": "i",
                        },
                        "type": "button",
                      },
                      "type": "div",
                    },
                  ],
                  "type": "div",
                },
                "type": "div",
              },
              "type": "div",
            },
            "type": "div",
          },
          "type": "div",
        },
        "type": "div",
      },
      "type": "main",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getSnapshotBeforeUpdate": true,
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
